--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,7 +3,7 @@
 $primary: #007bff;
 $secondary: #000;
 $light: #F3F6FF;
-$dark: #0A4271;
+$dark: #0E0E2D;
 $theme-colors: ( "primary": $primary, "secondary": $secondary, "light": $light, "dark": $dark, );
 $font-family-sans-serif: 'Montserrat',
 sans-serif;
